src/frontend/styles/main.css
/*
 * SPDX-FileCopyrightText: 2023 sublipri <sublipri@proton.me>
 * SPDX-License-Identifier: GPL-3.0-only
 */

p {
  text-align: center;
  width: 95%;
  margin-left: auto;
  margin-right: auto;
}

button {
  width: 100%;
  height: 50px;
  text-align: center;
  font-size: 24px;
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}
@media (orientation: landscape) {
  p {
    width: 80%;
  }
}
form {
  text-align: center;
  font-size: 24px;
}

input {
  width: 95vw;
  text-align: center;
  font-size: 24px;
  padding: 0;
  margin: 0;
}
input[type="checkbox"] {
  height: 26px;
  width: 26px;
}

select {
  font-size: 24px;
}
.modal {
  display: none;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgb(0, 0, 0);
  background-color: rgba(0, 0, 0, 0.4);
  text-align: center;
}

.modal-content {
  background-color: #fefefe;
  margin: 15% auto;
  padding: 20px;
  border: 1px solid #888;
  width: 80%;
  height: 20%;
  font-size: 24px;
}
.close {
  color: #aaa;
  float: right;
  font-size: 32px;
  font-weight: bold;
}
.close:hover,
.close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}
.colored-button {
  display: block;
  border: none;
  color: white;
  font-size: 32px;
  cursor: pointer;
  text-align: center;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}
.colored-button:active {
  color: black;
}
.colored-button:hover {
  color: white;
}
@media (hover: hover) {
  .colored-button:hover {
    color: black;
  }
}

